--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -325,5 +325,315 @@
 
 ### 2.4.3 平衡二叉查找树，插入算法实现
 
+树结点类定义：
+
+```java
+public class TreeNode<T> {
+    private int height;
+    T data;
+    TreeNode<T> leftChind;
+    TreeNode<T> rightChind;
+    int balance_factor;// 平衡因子
+
+    public TreeNode() {
+    }
+
+    public TreeNode(T data) {
+        this.data = data;
+    }
+
+    public void incrementHeught(){
+        this.height++;
+    }
+    public void decrementHeught(){
+        this.height--;
+    }
+
+    public T getData() {
+        return data;
+    }
+
+    public void setData(T data) {
+        this.data = data;
+    }
+
+    public TreeNode<T> getLeftChind() {
+        return leftChind;
+    }
+
+    public void setLeftChind(TreeNode<T> leftChind) {
+        this.leftChind = leftChind;
+    }
+
+    public TreeNode<T> getRightChind() {
+        return rightChind;
+    }
+
+    public void setRightChind(TreeNode<T> rightChind) {
+        this.rightChind = rightChind;
+    }
+
+    public int getBalance_factor() {
+        return balance_factor;
+    }
+
+    public void setBalance_factor(int balance_factor) {
+        this.balance_factor = balance_factor;
+    }
+}
+```
+
+树的定义：
+
+```java
+package com.stu.binarytree.BalancebinaryTree;
+
+import com.stu.binarytree.BinaryLinkedNode;
+import javafx.scene.transform.Rotate;
+import org.apache.zookeeper.Op;
+
+import java.util.LinkedList;
+
+public class BalanceBinaryTree<T extends Comparable> {
+
+    private TreeNode<T> root;
+    private int size;// 树中的元素数量
+    static int LH = 1;// 左边高
+    static int EH = 0;// 等高
+    static int RH = -1;// 右边高
+
+    // 用于插入过程中标识树是否长高了
+    private boolean taller = false;
+
+    public void insert(T e) {
+        size++;
+        if (root == null) {
+            root = new TreeNode<>(e);
+            root.balance_factor = EH;
+//            root.incrementHeught();//高度增加
+        } else {
+            insertAVL(root, e, null);
+        }
+    }
+
+    /**
+     * @param node 树的根结点
+     * @param e    插入的元素
+     * @return 插入是否成功
+     */
+    private boolean insertAVL(TreeNode<T> node, T e, TreeNode<T> parent) {
+
+        if (node == null) {
+            // 如果树为空 插入新结点
+            node = new TreeNode<>(e);
+            node.balance_factor = EH;
+//            node.incrementHeught();//高度增加
+            if (e.compareTo(parent.data) < 0) {
+                parent.leftChind = node;
+            } else {
+                parent.rightChind = node;
+            }
+            taller = true;
+        } else {
+            if (e.compareTo(node.data) < 0) {
+                // 针对左子树的操作
+                if (!insertAVL(node.leftChind, e, node)) {
+                    return false;
+                }
+                // 插入成功变高了
+                if (taller) {
+                    if (node.balance_factor == LH) {
+                        node = LeftBalance(node);
+                        if (parent != null) {
+                            if (e.compareTo(parent.data) < 0) {
+                                parent.leftChind = node;
+                            } else {
+                                parent.rightChind = node;
+                            }
+                        } else {
+                            root = node;
+                        }
+                        taller = false;
+                    } else if (node.balance_factor == EH) {
+                        node.balance_factor = LH;
+                        taller = true;
+//                        node.incrementHeught();
+                    } else {
+                        node.balance_factor = EH;
+                        taller = false;
+                    }
+                }
+
+            } else {
+                // 针对右子树的操作
+                if (!insertAVL(node.rightChind, e, node)) {
+                    return false;
+                }
+                // 插入成功变高了
+                if (taller) {
+                    if (node.balance_factor == LH) {
+                        node.balance_factor = EH;
+                        taller = false;
+                    } else if (node.balance_factor == EH) {
+                        node.balance_factor = RH;
+                        taller = true;
+//                        node.incrementHeught();
+                    } else {
+                        node = rightBalance(node);
+                        if (parent != null) {
+                            if (e.compareTo(parent.data) < 0) {
+                                parent.leftChind = node;
+                            } else {
+                                parent.rightChind = node;
+                            }
+                        } else {
+                            root = node;
+                        }
+                        taller = false;
+                    }
+                }
+            }
+        }
+        return true;
+    }
 
 
+    /**
+     * 右旋方法
+     *
+     * @param p 指向带旋树的根节点的引用
+     */
+    TreeNode r_roate(TreeNode p) {
+//        p.decrementHeught();// 高度减少
+        // 旋转中心,左子树的根结点
+        TreeNode lc = p.leftChind;
+        p.leftChind = lc.rightChind;
+        lc.rightChind = p;
+        return lc;
+    }
+
+    /**
+     * 右旋方法
+     *
+     * @param p 带旋树的根节点
+     */
+    TreeNode l_roate(TreeNode p) {
+//        p.decrementHeught();// 高度减少
+        // 旋转中心,右子树的根结点
+        TreeNode rc = p.rightChind;
+        p.rightChind = rc.leftChind;
+        rc.leftChind = p;
+        return rc;
+    }
+
+    /**
+     * 为t所指结点为根结点的二叉树，做左平衡处理
+     */
+    TreeNode LeftBalance(TreeNode<T> t) {
+        // 检查左子树的平衡因子，根据条件做平衡处理
+        TreeNode lc = t.leftChind;
+        TreeNode p = t;
+        if (lc.balance_factor == LH) {
+            // 做右旋处理
+            p = r_roate(t);
+        } else if (lc.balance_factor == RH) {
+            // 左旋
+            t.leftChind = l_roate(t.leftChind);
+            // 右旋
+            p = r_roate(t);
+        }
+        // 设置 树的根结点 t 和 左子树的根结点 lc 平衡因子为0
+        t.balance_factor = lc.balance_factor = EH;
+        return p;
+    }
+
+    /**
+     * 为t所指结点为根结点的二叉树，做右平衡处理
+     *
+     * @param t 待做左平衡处理的树的根结点的引用
+     */
+    TreeNode rightBalance(TreeNode t) {
+        // 检查左子树的平衡因子，根据条件做平衡处理
+        TreeNode rc = t.rightChind;
+        TreeNode p = t;
+        if (rc.balance_factor == RH) {
+            // 做左旋处理
+            p = l_roate(t);
+        } else if (rc.balance_factor == LH) {
+            // 右旋
+            t.rightChind = r_roate(t.rightChind);
+            // 左旋
+            p = l_roate(t);
+        }
+        // 设置 树的根结点 t 和 左子树的根结点 lc 平衡因子为0
+        t.balance_factor = rc.balance_factor = EH;
+        return p;
+    }
+
+    /**
+     * 层序遍历
+     */
+    public void levelOrderTraverse() {
+        // 这里我们使用队列，存储需要输出的结点
+        LinkedList<TreeNode> queue = new LinkedList<>();
+        TreeNode<T> p = root;
+        queue.add(p);// 第一层入队
+        while (!queue.isEmpty()) {
+            p = queue.remove();
+            print(p);
+            if (p.leftChind != null) {
+                queue.add(p.leftChind);
+            }
+            if (p.rightChind != null) {
+                queue.add(p.rightChind);
+            }
+        }
+    }
+
+    /**
+     * 递归中序遍历
+     */
+    public void recursionInOrderTraverse() {
+        recursionInOrderTraverse(root);
+    }
+
+    /**
+     * 递归中序遍历
+     */
+    private void recursionInOrderTraverse(TreeNode root) {
+        if (root != null) {
+            recursionInOrderTraverse(root.leftChind);
+            print(root);
+            recursionInOrderTraverse(root.rightChind);
+        }
+    }
+
+    private static void print(TreeNode v) {
+        System.out.print(" " + v.data + " ");
+    }
+}
+```
+
+测试类
+
+```java
+public class Demo {
+    public static void main(String[] args) {
+        BalanceBinaryTree<Integer> integerBalanceBinaryTree = new BalanceBinaryTree<>();
+        //生成树随机数
+        Random random = new Random();
+        for (int i = 0; i < 30; i++) {
+            int num = random.nextInt(300);
+            System.out.print(num+"  ");// 输出插入了那些数
+            integerBalanceBinaryTree.insert(num);
+        }
+        System.out.println();
+
+        System.out.println("层序遍历");
+        integerBalanceBinaryTree.levelOrderTraverse();
+        System.out.println();
+        System.out.println("中序遍历");
+        integerBalanceBinaryTree.recursionInOrderTraverse();
+    }
+}
+```
