--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -385,6 +385,8 @@ public class TreeNode<T> {
 
 树的定义：
 
+由于这里只是写一个算法逻辑，所以方法内存在一些if else 多层嵌套没有做处理，有兴趣的可以自己处理一下
+
 ```java
 package com.stu.binarytree.BalancebinaryTree;
 
