--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -639,3 +639,39 @@ public class Demo {
     }
 }
 ```
+
+## 2.5 总结
+
+1. **平衡二叉树的性能优势**： 很显然，平衡二叉树的优势在于不会出现普通二叉查找树的最差情况。其查找的时间复杂度为O(logN)。 
+
+2. **平衡二叉树的缺陷**：
+
+   * 很遗憾的是，为了保证高度平衡，动态插入和删除的代价也随之增加。**红黑树**是对它的一个优化是更加高效的查找结构。
+
+   * 在大数据量查找环境下(比如说系统磁盘里的文件目录，数据库中的记录查询 等)所有的二叉查找树结构(AVL、RBT)都不合适，问什么呢？首先我们需要知道下面的概念： 
+
+     * 在文件系统中，我们的索引需要存储起来，最后肯定要在硬盘中存储，而对磁盘的访问是需要做 I/O 操作的，那么你想每一次对树的结点的访问，都是需要去磁盘上读取数据的
+     * 我们知道所有二叉查找树结构的查找代价都与树高是紧密相关的,高度为h的树中我们去做查找，最坏情况需要h次访问
+
+     知道了上面的概念之后，我们再来看我们的 AVL(BET)（平衡二叉排序树），和RBT（红黑树）：
+
+     首先他们都是二叉树，他们的结点只能存放一个key,这就意味着，我们如果存放 2[10]-1的数据，就算是BST结构的树在最好的情况下也需要10层，也就是树的深度为10，检索的时候，最少要经过10个结点，也就是说要经过10次I/O，实际的文件系统需要存储的数据更是上G的，你想想树的深度会膨胀到什么层度。
+
+     那我们怎减少这个I/O的次数呢（再次减少树的深度），这样就有了我们后来的**多路查找树（B-Tree,B+Tree,  ...）**的结构来做到这一点。 
+
+   **当然在一些小数据量的时候还是可以使用RBT(红黑树的)，比如java中 TreeMap, HashMap,都有使用这样的结构。**
+
+**上面提到的红黑树和多路查找树都是属于深度有界查找树（depth-bounded tree —DBT）** 
+
+# 3. 红黑树
+
+## 3.1 红黑树的定义
+
+* 它是一种二叉查找树
+
+* 每个节点或者是黑色，或者是红色。 
+* 根节点是黑色。 
+* 每个叶子节点（NIL）是黑色。 [注意：这里叶子节点，是指为空的叶子节点！] 
+* 如果一个节点是红色的，则它的子节点必须是黑色的。 
+* 从一个节点到该节点的子孙节点的所有路径上包含相同数目的黑节点。 
+
