--- a/数据结构/二叉树/树+基础二叉树详解.md
+++ b/数据结构/二叉树/树+基础二叉树详解.md
@@ -281,7 +281,7 @@ public static void recursionPreOrderTraverse(BinaryLinkedNode root) {
       }
   ```
 
-* 三叉链表
+* 三叉链表（增加一个指向双亲结点的指针）
 
 ## 中序遍历 = LPR
 
@@ -345,7 +345,7 @@ public static void recursionInOrderTraverse(BinaryLinkedNode root) {
       }
   ```
 
-- 三叉链表：
+- 三叉链表（增加一个指向双亲结点的指针）：
 
 ## 后序遍历 = LRP
 
@@ -400,7 +400,7 @@ public static void recursionPostOrderTraverse(BinaryLinkedNode root) {
   }
   ```
 
-- 三叉链表
+- 三叉链表（增加一个指向双亲结点的指针）：
 
 ## 层序遍历
 
