--- a/study-note.assets/面试题记录.md
+++ b/study-note.assets/面试题记录.md
@@ -35,7 +35,7 @@ IoC最大的缺点是什么？
 
 
 
-## 消息队列 推拉模型比较
+# 消息队列 推拉模型比较
 
 **推模型（Push方式）**  由消息中间件主动的将消息推送给消费者； 
 
@@ -43,7 +43,7 @@ IoC最大的缺点是什么？
 
  两种模式各有优势，Push方式可以尽快的将消息发送给消费者；而Pull方式的好处在于可以进一步的解除消费者对于消息中间件的依赖，通过后台任务去定期的访问消息队列中的消息。  Push方式的坏处是，如果一个消费者处理消息的能力很弱，而消息中间件不停的向其发送消息，则会导致消费者缓冲溢出；  Pull方法需要引进一个单独的服务进程，加大消耗的资源。  
 
-## 三个线程A,B,C，轮流输出ABC，顺序不可打乱，各十次。
+# 三个线程A,B,C，轮流输出ABC，顺序不可打乱，各十次。
 
 * 第一种方式
 
@@ -125,7 +125,7 @@ IoC最大的缺点是什么？
   }
   ```
 
-## 负载均衡算法设计
+# 负载均衡算法设计
 
 有一个消息队列集群，集群里每台Broker的响应时间RT都不一样，但是每台Broker的极限服务QPS都是一样的，超过这个QPS会出现过载雪崩。而消息的生产者客户端，每次发送都会选择其中的一台broker来发送，一般来说发送逻辑是运行在一个线程池里面。假设cpu资源充足，通过实现一个负载均衡算法，使得生产者能够达到最大吞吐量，最优的平均响应时间，但是又不能把任何一台服务器压垮。已知每个broker的rt、极限qps，消息生产者的线程数量，请求总数，如果采用吞吐量最优的算法，求处理完所有请求需要的耗时，单位毫秒。
 
@@ -177,13 +177,13 @@ public class Main {
 
 }
 
-#### 负载均衡算法
+## 负载均衡算法
 
-##### 前提
+### 前提
 
 cpu资源充足
 
-##### 前提
+### 前提
 
 * 最大QPS = 最大并发量/响应时间 如果单位是毫秒也就是说QPS 是单位毫秒处理请求的最大数量
 * 这个题我们知道了多台服务器的 最大QPS maxQPS 以及响应时间 RT
@@ -194,15 +194,15 @@ cpu资源充足
 
 我们需要根据这个权重maxConcurrentNum 来选择最后请求落在哪一个服务器
 
-##### 基础逻辑设计
+### 基础逻辑设计
 
 先选择权重最大的，然后将请求给他，同时他的权重-1，服务器处理完了之后权重+1，这样应该落在什么地方就根据权重排序来找了。
 
-##### 解决多进程问题数据共享问题
+### 解决多进程问题数据共享问题
 
 在分布式中（多进程），这时候需要借助中间件来管理，推荐redis（高可用（性能杠杠的））
 
-##### 解决并发问题
+### 解决并发问题
 
 * 单进程中
 
@@ -212,7 +212,7 @@ cpu资源充足
 
   使用分布式锁同步多个进程
 
-##### 分布式中的服务发现
+### 分布式中的服务发现
 
 服务器ip 需要借助中间件来实现服务发现，这里推荐的服务发现管理的中间件是zookeeper或则redis
 
@@ -224,7 +224,7 @@ redis也有相同的功能
 
 当然也可以用zookeeper 做服务发现，redis管理权重
 
-##### 最后是需要计算处理所有请求的时间的
+### 最后是需要计算处理所有请求的时间的
 
 最大QPS = 最大并发量/响应时间 如果单位是毫秒也就是说QPS 是单位毫秒处理请求的最大数量
 
@@ -236,17 +236,17 @@ reqNum/maxQps = 这台服务器消耗的时间（单位毫秒）spendTime
 
 
 
-##  zookeeper 在分布式中是作为一个服务协调的角色
+#  zookeeper 在分布式中是作为一个服务协调的角色
 
 比如作为注册中心，配置中心，实现分布式锁，集群管理，分布式消息队列
 
 实际上，这些功能的实现都是依赖于背后 zookeeper与 client 之间的 Lease 
 
-## dubbo 在分布式中是作为一个服务治理的角色
+# dubbo 在分布式中是作为一个服务治理的角色
 
 服务注册发现，熔断，限流.......
 
-### Paxos 协议
+# Paxos 协议
 
 ​	从前面的例子不难看出，Paxos 协议的过程类似于“占坑”，哪个 value 把超过半数的“坑”
 （Acceptor）占住了，哪个 value 就得到批准了。 
