--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -668,10 +668,13 @@ public class Demo {
 ## 3.1 红黑树的定义
 
 * 它是一种二叉查找树
-
 * 每个节点或者是黑色，或者是红色。 
 * 根节点是黑色。 
 * 每个叶子节点（NIL）是黑色。 [注意：这里叶子节点，是指为空的叶子节点！] 
 * 如果一个节点是红色的，则它的子节点必须是黑色的。 
 * 从一个节点到该节点的子孙节点的所有路径上包含相同数目的黑节点。 
+
+
+
+**最近暂时有点忙，后续我不补充上，比如BTree，B+Tree的内容**
 
