--- a/多线程并发/并发编程中的重要概念.md
+++ b/多线程并发/并发编程中的重要概念.md
@@ -471,7 +471,7 @@ public class Demo {
 
 ## 15.1 ConcurrentHashMap
 
-
+https://github.com/Alan-Jun/study-note/blob/master/java%E9%9B%86%E5%90%88/ConcunrrentHashMap.md
 
 ## 15.2 ConcurrentLinkedQueue
 
@@ -756,7 +756,9 @@ public ThreadPoolExecutor(int corePoolSize,
 
 * `int maximumPoolSize `: 线程池最大工作线程数量，如果workQueue队列满了（前提肯定是当前线程池工作线程数量>=corePoolSize）,这时候线程池会创建新的工作线程来执行任务，**注意：如果下面的参数workQueue使用的是无界队列（也就是队列不会满）那么这个参数自然就没有作用了**
 
-* `long keepAliveTime `: 线程池的工作线程空闲之后，保持存活的一个时间，**如果每个任务的执行时间比较短，可以调大时间提高线程的利用率**
+* `long keepAliveTime `: 当前有多于` corePoolSize` 的线程，则这些多出的线程在空闲时间超过 `keepAliveTime` 时将会终止，**如果每个任务的执行时间比较短，可以调大时间提高线程的利用率**，
+
+  **默认情况下，保持活动策略只在有多于 `corePoolSizeThreads` 的线程时应用。但是只要 keepAliveTime 值大于 0，`allowCoreThreadTimeOut(true) ` 方法也可将此超时策略应用于核心线程，通常应该在使用该池前主动调用此方法。**
 
 * `TimeUnit unit` : 这个参数就是上面参数的时间单位了：
   * TimeUnit .DAYS(天)；
