--- a/study-note.assets/面试题记录.md
+++ b/study-note.assets/面试题记录.md
@@ -1,3 +1,15 @@
+# 非关系型数据库为什么比关系型数据库快
+
+最主要的原因是：
+
+* 非关系型数据库一般使用的都是内存，比如mongDB，写操作使用了内存映射技术，写入数据时候，只要完成写入到内存的过程就可以返回给应用程序了，这样并发量，以及性能自然很高，而持久化操作是一个后台异步过程。当然除了使用内存的方式，还有利用硬盘的顺序读写也可以换来接近内存的读写速度，比较典型的代表是kafka, 关系型数据库mysql的日志记录也是利用了顺序读写的特点。
+* 关系型数据库基本都是在硬盘上做操作，数据写过来要写到硬盘可以以，而这样的IO操作性能并不好，并且存在IO阻塞的过程，并发度并不高。读取也是需要IO的，然而硬盘（非固态硬盘）IO过程，需要寻道（找到对应的扇面），然后找扇区，然后再去读取（上述过程都是机械过程）。如果数据不连续，就要重复前面的过程，如果连续，那就剩下找扇面的过程。这也是为什么说利用硬盘顺序读写能提升性能的原因
+* 说到硬盘，如果使用固态硬盘（读写依赖电学信号而不是机械过程，速度自然快很多，随机读取特别特别快）的话，有的性能甚至比内存还好，为什么说有的呢，我们来看下面的内容：
+  * 固态硬盘容量越大，内部的颗粒就越多，读写性能越好，寿命就越长。不过，容量越大，对读取速度的影响不是很大，对写入速度影响比较大
+  * 然后企业级固态品质性能肯定比市面上的消费级固态好
+  * 不同接口的固态的读写速度又有差别（一般发行时间靠后的使用的都是最新的接口，性能快很多）
+  * 有的固态还设计了缓存，这样性能又有差别了
+
 # 同步阻塞/ 非阻塞 .异步 非组赛
 
 https://www.cnblogs.com/George1994/p/6702084.html
