--- a/study-note.assets/面试题记录.md
+++ b/study-note.assets/面试题记录.md
@@ -10,6 +10,12 @@
   * 不同接口的固态的读写速度又有差别（一般发行时间靠后的使用的都是最新的接口，性能快很多）
   * 有的固态还设计了缓存，这样性能又有差别了
 
+**你会发现我们的性能优化，无非就是几点**：
+
+* 线程：使用的是多线程还是单线程
+* IO:  使用内存，或则使用固态， 或则使用 磁盘的顺序读写
+* 操作系统：减少用户态和内核态的切换， 比如[零拷贝 ](https://www.jianshu.com/p/fad3339e3448)
+
 # 同步阻塞/ 非阻塞 .异步 非组赛
 
 https://www.cnblogs.com/George1994/p/6702084.html
