--- a/多线程并发/并发编程中的重要概念.md
+++ b/多线程并发/并发编程中的重要概念.md
@@ -590,7 +590,7 @@ public E take() throws InterruptedException {
     takeLock.lockInterruptibly();// 可中断的锁
     try {
         while (count.get() == 0) {
-            notEmpty.await();// 队列为空等待，这个方法会调用AQS中的该方法的实现，然后将当前线程加入到这个对象关联的等待队列中，使用LockSupport.park()方法，集体的方法在JUC的AQS中实现的，可以点进去看看
+            notEmpty.await();// 队列为空等待，这个方法会调用AQS中的该方法的实现，然后将当前线程加入到这个对象关联的等待队列中，使用LockSupport.park()方法，具体的方法在JUC的AQS中实现的，可以点进去看看
         }
         x = dequeue();
         c = count.getAndDecrement();
