--- a/多线程并发/并发编程中的重要概念.md
+++ b/多线程并发/并发编程中的重要概念.md
@@ -594,13 +594,13 @@ public E take() throws InterruptedException {
         }
         x = dequeue();
         c = count.getAndDecrement();
-        if (c > 1)// 获取元素之后还有队列中不为控
+        if (c > 1)// 获取元素之后队列中不为空
             notEmpty.signal();//唤醒一下
     } finally {
         takeLock.unlock();// 释放锁
     }
     if (c == capacity)
-        signalNotFull();// 唤醒 生产（插入）性质阻塞
+        signalNotFull();// 唤醒 生产（插入）操作那边的阻塞
     return x;
 }
 ```
@@ -628,7 +628,7 @@ public void put(E e) throws InterruptedException {
         putLock.unlock();
     }
     if (c == 0)
-        signalNotEmpty();// 唤醒 获取性质阻塞
+        signalNotEmpty();// 唤醒 获取操作那边的阻塞
 }
 ```
 
