--- a/多线程并发/并发编程中的重要概念.md
+++ b/多线程并发/并发编程中的重要概念.md
@@ -732,7 +732,7 @@ final void runWorker(Worker w) {
 
 ### 16.3.1 线程池的创建（ThreadPoolExecutor）
 
-我们可以通过 `ThreadPoolExecutor` 提供了几个构造方法去创建线程池，由于最终调用的都是一个方法，这里我们就介绍这个最主要的方法：
+我们可以通过 `ThreadPoolExecutor` 提供的几个构造方法去创建线程池，由于最终调用的都是一个方法，这里我们就介绍这个最主要的方法：
 
 ```java
 public ThreadPoolExecutor(int corePoolSize,
