--- a/多线程并发/并发编程中的重要概念.md
+++ b/多线程并发/并发编程中的重要概念.md
@@ -788,7 +788,7 @@ public ThreadPoolExecutor(int corePoolSize,
 
 * `void execute(Runnable runnable)` : 该方法提交不需要返回值的任务
 
-后面的这集合方法都会被包装成`FutureTask`，为什么这么说，有兴趣可以自己去跟源码
+后面的这几个方法都会被包装成`FutureTask`，为什么这么说，有兴趣可以自己去跟源码
 
 * `<T> Future<T> submit(Callable<T> task)` : 
 
