--- a/多线程并发/并发编程中的重要概念.md
+++ b/多线程并发/并发编程中的重要概念.md
@@ -842,7 +842,9 @@ cond2(no)->op2
 cond3(no)->op3
 ```
 
-注意上面的步骤中，**创建新工作线程需要获取全局锁**，`ThreadPoolExecutor` 采取上述步骤的总体设计思路，是为了在 **执行`execute()`方法的时候尽可能避免获取全局锁（因为这是一个严重的性能影响点），当 `ThreadPoolExecutor`完成`corePoolSize`的预热之后，几乎所有的`execute()`方法都在执行加入`BlockingQueue`队列这一步骤，这样就避免了获取全局锁
+![1540958905620](https://github.com/Alan-Jun/study-note/blob/master/study-note.assets/1540958905620.png)
+
+注意上面的步骤中，**创建新工作线程需要获取全局锁**，`ThreadPoolExecutor` 采取上述步骤的总体设计思路，是为了在  执行`execute()`方法的时候尽可能避免获取全局锁（因为这是一个严重的性能影响点），当 `ThreadPoolExecutor`完成`corePoolSize`的预热之后，几乎所有的`execute()`方法都在执行加入`BlockingQueue`队列这一步骤，这样就避免了获取全局锁
 
 ### 16.3.4 关闭线程池
 
