--- a/多线程并发/并发编程中的重要概念.md
+++ b/多线程并发/并发编程中的重要概念.md
@@ -836,7 +836,7 @@ Executor 框架有三大部分组成：
   * 包括任务执行机制的核心接口`Executor`,它是Executor框架的基础，他将任务的提交和执行分离。
   * 以及继承自`Executor`的`ExecutorService`接口，
 
-  Executor框架有两个关键的实现类，他们实现了``ExecutorService` 接口 :
+  Executor框架有两个关键的实现类，他们实现了`ExecutorService` 接口 :
 
   * `ThreadPoolExecutor` : 是线程池的核心实现类，用来执行被提交的任务。具体细节 16.3节已经做过介绍
   * `ScheduledThreadPoolExecutor` : 可以在给定的延迟后运行任务，或则定期执行任务（定时任务），他比`Timer`更加灵活且强大。
