--- a/多线程并发/并发编程中的重要概念.md
+++ b/多线程并发/并发编程中的重要概念.md
@@ -850,12 +850,12 @@ Executor 框架有三大部分组成：
 
 它主要用来在给定的延迟后运行任务，或则定期执行任务（定时任务），他比`Timer`更加灵活且强大。
 
-`ScheduledThreadPoolExecutor`线程池创建继承了父类 `ThreadPoolExecuto` 的构造方法,不过内部使用了无界队列 `DelayQueue`，因为使用了无界队列，所以自然饱和策略以及`maximumPoolSize `参数自然就没有了意义，他的线程数量最多就只能到`corePoolSize`,所以我们可以看到`Executors`工厂类创建这种类型的而线程池的方法最后就是传入`corePoolSize`以及 `ThreadFactory`。
+`ScheduledThreadPoolExecutor`线程池创建继承了父类 `ThreadPoolExecuto` 的构造方法,不过内部使用了无界队列 `DelayQueue`，因为使用了无界队列，所以自然饱和策略以及`maximumPoolSize `参数自然就没有了意义，他的线程数量最多就只能到`corePoolSize`,所以我们可以看到`Executors`工厂类创建这种类型的线程池的方法只需要传入`corePoolSize`以及 `ThreadFactory`。
 
 **`ScheduledThreadPoolExecutor`的创建**：
 
 * 使用他的构造方法创建
-* 使用`Executors`工厂类来创建（一般都使用这个，`Executors`工厂类不止是用来创建这个的，还有很多作用，想了解的自己去查资料）
+* 使用`Executors`工厂类来创建（一般都使用这个，`Executors`工厂类不止是用来创建这个的，还有很多作用，想了解的自己去看API）
 
 **`ScheduledThreadPoolExecutor`的执行**：
 
