--- a/study-note.assets/面试题记录.md
+++ b/study-note.assets/面试题记录.md
@@ -1,3 +1,7 @@
+# MySql 在非 `SERIALIZABLE` 隔离级别下，怎么解决的幻读，以提高并发效率
+
+答案是使用的mvcc, https://blog.csdn.net/liwenqiang758/article/details/81013005
+
 # 非关系型数据库为什么比关系型数据库快
 
 最主要的原因是：
