--- a/算法/经典排序算法.md
+++ b/算法/经典排序算法.md
@@ -140,7 +140,6 @@ public class Swap {
         }
     ```
 
-    
 ##### 2-路插入排序
 
   2-路插入排序是在2-分插入排序基础上再次改进得来。目的是为了在减少比较次数的基础上再次减少排序过程中的记录的移动次数。为此付出的代价就是需要n个记录的辅助空间。
@@ -195,7 +194,7 @@ public class Swap {
 
 * 稳定性：不稳定
 
-* 时间复杂度：最坏 O(n log2 n ) 最好O(n log2 n)  平均O(n log n)
+* 时间复杂度：最坏 O(n[^2] ) 最好O(n )  平均O(n[^1.3])
 
 * 原理：先将整个待排序序列分割成若干子序列分别进行直接插入排序，带整个序列**基本有序**的之后，在对全体记录直接进行一次插入排序，将间隔某个增量的所有记录作为一个子序列。使用增量序列得到了若干子序列。
 
@@ -268,8 +267,6 @@ public class Swap {
         }
     ```
 
-    
-
   * 优化之后
 
     ```java
@@ -299,7 +296,6 @@ public class Swap {
         }
     ```
 
-    
 
 ##### 快速排序
 
@@ -307,7 +303,7 @@ public class Swap {
 
 - 稳定性：不稳定
 
-- 时间复杂度：最坏 O(n[^2]) 最好O(n log n)  平均O(n log n)
+- 时间复杂度：最坏 O(n[^2]) 最好O(n log<sub>2</sub>n)  平均O(n log<sub>2</sub> n)
 
 - 原理：通过一趟排序下来将待排序序列分割成独立的两个部分，然后再分别对这两个序列进行这种排序，最终达到序列的有序
 
@@ -447,7 +443,6 @@ public class Swap {
       }
   ```
 
-  
 
 ##### 堆排序
 
@@ -455,7 +450,7 @@ public class Swap {
 
 - 稳定性：不稳定
 
-- 时间复杂度：最坏 O(n log n) 最好O(n log n)  平均O(n  log n)
+- 时间复杂度：最坏 O(n log<sub>2</sub> n) 最好O(n log<sub>2</sub> n) 平均O(n log<sub>2</sub> n) 
 
 - 原理：  是利用堆这种数据结构所设计的一种排序算法。堆积是一个近似完全二叉树的结构，并同时满足堆积的性质：即子结点的键值或索引总是小于（或者大于）它的父节点。  
 
@@ -517,7 +512,7 @@ public class Swap {
 
 - 稳定性：稳定
 
-- 时间复杂度：最坏 O(n log n) 最好O(n log n)  平均O(n  log n)
+- 时间复杂度：最坏 O(n log<sub>2</sub> n)  最好O(n log<sub>2</sub> n)  平均O(n log<sub>2</sub> n) 
 
 - 原理：  归并排序是一种稳定的排序方法。将已有序的子序列合并，得到完全有序的序列；即先使每个子序列有序，再使子序列段间有序。若将两个有序表合并成一个有序表，称为2-路归并 
 
@@ -561,7 +556,6 @@ public class Swap {
       }
   ```
 
-  
 
 #### 基数排序
 
