--- a/算法/经典排序算法.md
+++ b/算法/经典排序算法.md
@@ -47,7 +47,7 @@
 * 简单排序 
   * 时间复杂度：O(n[^2])
 * 先进排序
-  * 时间复杂度：O(n * log * n)
+  * 时间复杂度：O(n  log  n)
 * 基数排序
   - 时间复杂度：O(d*n)
 
@@ -99,7 +99,7 @@ public class Swap {
       }
   ```
 
-  该排序需要注意：当待排序记录的数量n 很小的时候这是一种很好的排序方法，但是通常待排序的记录都很大，所以直接使用插入排序就不恰当了，这时候在直接插入排序的基础上从***减少比较次数***+***减少记录移动次数着手进行改进得出了下面两种排序方法
+  该排序需要注意：当待排序记录的数量n 很小的时候这是一种很好的排序方法，但是通常待排序的记录都很大，所以直接使用插入排序就不恰当了，这时候在直接插入排序的基础上从**减少比较次数,减少记录移动次数着手**进行改进得出了下面两种排序方法
 ##### 2-分插入排序
 
   基于减少比较操作的次数得出了这种插入排序。
