--- a/Data-Structure/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/Data-Structure/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -2,7 +2,7 @@
 
 ## 1.1 二叉查找树的定义
 
-什么是二叉查找树呢？它是具有一下性质的二叉树（关于二叉树请看我关于[二叉树定义](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/%E6%A0%91%2B%E5%9F%BA%E7%A1%80%E4%BA%8C%E5%8F%89%E6%A0%91%E8%AF%A6%E8%A7%A3.md)的内容）:
+什么是二叉查找树呢？它是具有一下性质的二叉树（关于二叉树请看我关于[二叉树定义](%E6%A0%91%2B%E5%9F%BA%E7%A1%80%E4%BA%8C%E5%8F%89%E6%A0%91%E8%AF%A6%E8%A7%A3.md)的内容）:
 
 * 若它的左子树不为空，那么它的左子树上的所有结点的值都小于它的根结点的值
 * 若它的右子树不为空，那么它的右子树上的所有结点的值都大于（现在实际索引的算法设计中是 >=）它的根结点的值
@@ -13,7 +13,7 @@
 
 如图：
 
-![1539839046436](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539839046436.png)
+![1539839046436](assets/1539839046436.png)
 
 ## 1.2 二叉查找树具有的一些特点
 
@@ -46,13 +46,13 @@
 
   * `40,15,21,19,18，17`：进行到这我就没有在进行下去了，原因呢看图：
 
-    ![1539840633788](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539840633788.png)
+    ![1539840633788](assets/1539840633788.png)
 
     我们在看我们原来的图深度是5，这里你会说，深度代表什么，那么我们用一个直观的例子来说 : 在原来的图的二叉搜索树中我们要查找17这个值，我们只需要经过5次判断，就可以确定这个值存在；在现在这个结构中呢，需要6次；这样我们就能只管的看出，二叉排序树的缺点了吧，**表中数据动态变化不可控，相同的数据按照不同的顺序传入，得到的结果大不相同，在现在的存储系统中大量用到索引，如果选择这样的结构的，绝对会成为检索的性能瓶颈**；
 
     下面我会再次用一个极端的例子，让你们更加深刻的理解到这种结构的问题，这里我们按照这样的顺序插入数据：`15，17，18，19，21，40，56，60，68，100`
 
-    ![1539841346239](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539841346239.png)
+    ![1539841346239](assets/1539841346239.png)
 
     看到这个结果什么感受，所以这种结构只能作为一个理论基础，在实际运用中是不会采用的。 
 
@@ -72,7 +72,7 @@
 
 * 若左右子树不为空为了保证 “ 稳定性 ”，可以有两种做法，为了更加直观我们用一个树来演示：
 
-  ![1539870820922](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539871115161.png)
+  ![1539870820922](assets/1539871115161.png)
 
   **中序遍历的结果：`29,35,36,37,47,49,51,56,58,62,73,88,99`**
 
@@ -84,7 +84,7 @@
 
     
 
-    ![1539871310522](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539871310522.png)
+    ![1539871310522](assets/1539871310522.png)
 
     **树的深度是6**
 
@@ -92,11 +92,11 @@
 
     * 使用前驱得到的结果图
 
-      ![1539872531318](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539872531318.png)
+      ![1539872531318](assets/1539872531318.png)
 
     * 使用后继得到的结果图
 
-    ![1539872603495](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539872603495.png)
+    ![1539872603495](assets/1539872603495.png)
 
     **使用前驱（后继）两种方法修改的后二叉树的深度要么不变，要么减少（都会达到这样的效果）,显而易见，我们在实现的使用应该选择前驱（后继）的方式实现算法**
 
@@ -186,13 +186,13 @@
 
 * 平衡二叉树的平衡因子树图：
 
-  ![1539917345242](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539917680023.png)
+  ![1539917345242](assets/1539917680023.png)
 
-  ![1539917402506](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539917402506.png)
+  ![1539917402506](assets/1539917402506.png)
 
 * 非平衡二叉树的平衡因子树图：
 
-  ![1539917513301](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539917513301.png)
+  ![1539917513301](assets/1539917513301.png)
 
 ## 2.4 平衡二叉查找树的插入过程
 
@@ -210,7 +210,7 @@
 
   那么我们现在用图来解释：
 
-  ![1540009634342](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540009634342.png)
+  ![1540009634342](assets/1540009634342.png)
 
   
 
@@ -222,9 +222,9 @@
 
   直接看图吧
 
-![1540008139273](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540008139273.png)
+![1540008139273](assets/1540008139273.png)
 
-![1540008079485](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540010321888.png)
+![1540008079485](assets/1540010321888.png)
 
 **可以看到，这个最终平衡化之后的树的深度和没有插入39这个结点之前的树的深度是一样的**
 
@@ -236,7 +236,7 @@
 
   那么我们现在用图来解释：
 
-  ![1540010056491](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540010056491.png)
+  ![1540010056491](assets/1540010056491.png)
 
   **可以看到，这个最终平衡化之后的树的深度和没有插入68这个结点之前的树的深度是一样的**
 
@@ -246,9 +246,9 @@
 
   那么我们现在用图来解释：	
 
-  ![1540008662913](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540008662913.png)
+  ![1540008662913](assets/1540008662913.png)
 
-  ![1540008848592](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540008848592.png)
+  ![1540008848592](assets/1540008848592.png)
 
 **可以看到，这个最终平衡化之后的树的深度和没有插入39这个结点之前的树的深度是一样的**
 
@@ -265,15 +265,13 @@
 
      如图：
 
-     ![1540011463127](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540011463127.png)
+     ![1540011463127](assets/1540011463127.png)
 
    * BBST的根结点的平衡因子为 0 (右子树深度等于左子树深度)，则只需要将根结点的平衡因子改为1，BBST深度增加1.
 
      如图：
 
-     ![1540013634967](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540013634967.png)
-
-     
+     ![1540013634967](assets/1540013634967.png)
 
    * BBST的根结点的平衡因子为 1 (左子树深度等于右子树深度1)：
 
@@ -281,13 +279,13 @@
 
        如图
 
-       ![1540015066588](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540015066588.png)
+       ![1540015066588](assets/1540015066588.png)
 
        **上图 中间 的 图 38 的平衡因子 就是“1”，因为在 递归算法中，他不会变成2，而是在平衡处理的时候直接修改为了0，后面的算法时间中，你们会看到**
 
      * 若BBST 的根结点的左子树的根结点的平衡因子在插入节点后变为-1，先左后右，如图
 
-       ![1540016075317](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540016075317.png)	
+       ![1540016075317](assets/1540016075317.png)	
 
        **实际算法中，平衡因子在旋转之前就修改好了**
 
@@ -297,17 +295,15 @@
 
      如图：
 
-     ![1540015746348](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540015746348.png)
+     ![1540015746348](assets/1540015746348.png)
 
    - BBST的根结点的平衡因子为 0 (右子树深度等于左子树深度)，则只需要将根结点的平衡因子改为1，BBST深度增加1.
 
      如图：
 
-     
 
-     ![1540013678733](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540013678733.png)
 
-     
+     ![1540013678733](assets/1540013678733.png)
 
    - BBST的根结点的平衡因子为 -1 (左子树深度等于右子树深度1)：
 
@@ -315,13 +311,13 @@
 
        如图
 
-       ![1540016295083](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540016295083.png)
+       ![1540016295083](assets/1540016295083.png)
 
      - 若BBST 的根结点的右子树的根结点的平衡因子在插入节点后变为1，先右后做，如图
 
        
 
-       ![1540016418153](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540016418153.png)
+       ![1540016418153](assets/1540016418153.png)
 
 ### 2.4.3 平衡二叉查找树，插入算法实现
 
@@ -676,5 +672,5 @@ public class Demo {
 
 
 
-**最近暂时有点忙，后续我不补充上，比如BTree，B+Tree的内容**
+**最近暂时有点忙，后续我补充上，比如BTree，B+Tree的内容**
 
